--- a/examples/ex6_compression/Makefile
+++ b/examples/ex6_compression/Makefile
@@ -1,7 +1,7 @@
 DATASPACES_DIR=/home/bz186/myrepo/dataspaces/build/bin
 DATASPACES_INC=-I/home/bz186/myrepo/dataspaces/build/include
 DATASPACES_LIB=-L/home/bz186/myrepo/dataspaces/build/lib -ldspaces -ldscommon -ldart   -lm  -lrt   -libverbs  -lrdmacm  -L/home/bz186/zfp/lib/ -lzfp
-ZFP_INC=-I/home/bz186/myrepo/dataspaces/include -I/home/bz186/zfp/include
+ZFP_INC=-I/home/bz186/myrepo/dataspaces/include -I/home/bz186/zfp/include -I/home/bz186/myrepo/dataspaces
 
 CC=mpicc
 
