adding examples for compression at server

--- a/examples/ex6_compression/Makefile
+++ b/examples/ex6_compression/Makefile
@@ -5,14 +5,14 @@ ZFP_INC=-I/home/bz186/myrepo/dataspaces/include -I/home/bz186/zfp/include -I/hom
 
 CC=mpicc
 
-DEPS=put.c get.c test.c
-OBJ=put.o get.o test.o
+DEPS=put.c get.c test.c put_server.c get_server.c
+OBJ=put.o get.o test.o put_server.o get_server.o
 
 %.o: %.c $(DEPS)
 	$(CC) -g -c -o $@ $< $(ZFP_INC) $(DATASPACES_INC) $(DATASPACES_LIB)
 
 
-all: put get test
+all: put get test put_server get_server
 
 put: put.o
 	$(CC) -o $@ $^ $(ZFP_INC) $(DATASPACES_INC) $(DATASPACES_LIB)
@@ -21,10 +21,17 @@ put: put.o
 get: get.o
 	$(CC) -o $@ $^ $(ZFP_INC) $(DATASPACES_INC) $(DATASPACES_LIB)
 
+put_server: put_server.o
+	$(CC) -o $@ $^ $(ZFP_INC) $(DATASPACES_INC) $(DATASPACES_LIB)
+
+
+get_server: get_server.o
+	$(CC) -o $@ $^ $(ZFP_INC) $(DATASPACES_INC) $(DATASPACES_LIB)
+
 test: test.o
 	$(CC) -g -o $@ $^ $(ZFP_INC) $(DATASPACES_INC) $(DATASPACES_LIB)
 
 .PHONY: clean
 
 clean:
-	rm -f *.o put get test
+	rm -f *.o put get test put_server get_server
